more minor tweaks to fix dropdown on mobile

--- a/css/main.less
+++ b/css/main.less
@@ -313,7 +313,8 @@ footer {
                         }
                     }
                 }
-                &:hover {
+                &:hover,
+                &.show {
                     > ul {
                         opacity: 1;    
                         max-height: 16em;                    
